# complexity-guard

./: .complexityguard.always-pass.json  .complexityguard.example.json  .env.example  .gitignore  .gitmodules  .valgrind.supp  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PUBLISHING.md  README.md  build.zig  build.zig.zon  package.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
benchmarks/: README.md
docs/: PRD.md  architecture-decision-rust.md  benchmarks.md  claude-code-skill.md  cli-reference.md  cognitive-complexity.md  cyclomatic-complexity.md  duplication-detection.md  examples.md  getting-started.md  halstead-metrics.md  health-score.md  react-composition-case-study.md  refinements.md  releasing.md  sarif-output.md  scoring.md  structural-metrics.md
homebrew/: complexity-guard.rb
marketing/: MARKETING-PLAN.md  README.md  competitive-analysis.md  launch-strategy.md  marketing-ideas.md  product-context.md  product-market-fit.md  revenue-model.md
rust/: Cargo.toml
rust/src/: lib.rs  main.rs  types.rs
rust/src/cli/: args.rs  config.rs  mod.rs
rust/src/metrics/: cognitive.rs  cyclomatic.rs  duplication.rs  halstead.rs  mod.rs  scoring.rs  structural.rs
rust/src/output/: console.rs  exit_codes.rs  json_output.rs  mod.rs  sarif_output.rs
rust/src/parser/: mod.rs
rust/src/pipeline/: discover.rs  parallel.rs
rust/tests/: integration_tests.rs  parser_tests.rs
rust/tests/fixtures/baselines/: halstead_cases.json  structural_cases.json
scripts/: check-memory.sh  initial-publish.sh  publish.sh  (+1 more)
(+736 files in other folders)
