# v0.8.0 baseline binary size: 279 KB (Phase 17, macOS arm64)
[package]
name = "complexity-guard"
version = "0.8.0"
edition = "2021"
rust-version = "1.80"

[dependencies]
tree-sitter = "0.26"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
thiserror = "2"
anyhow = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
