# v0.8.0 baseline binary size: 279 KB (Phase 17, macOS arm64)
[package]
name = "complexity-guard"
version = "0.8.0"
edition = "2021"
rust-version = "1.80"

[dependencies]
tree-sitter = "0.26"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
owo-colors = "4"
minijinja = "2"
rayon = "1"
walkdir = "2"
globset = "0.4"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
